--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "aronno-singh-durjoy-portfolio",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://aronnosinghdurjoy.github.io",
+  "homepage": "https://aronnosinghdurjoy.github.io/arnopsinghdurjoy_aronno_.github.io",
   "dependencies": {
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "framer-motion": "^10.16.4",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
+    "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0"
   },
   "scripts": {
@@ -38,6 +38,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "gh-pages": "^6.3.0"
   }
 }
